Fix:Legal page filenames

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -203,9 +203,9 @@
     <footer class="py-5 text-center text-muted small border-top bg-white luxe-footer">
         <div class="container">
             <div class="mb-4">
-                <a href="impressum.html" class="mx-2 text-decoration-none text-muted footer-link">Impressum</a>
-                <a href="datenschutz.html" class="mx-2 text-decoration-none text-muted footer-link">Datenschutz</a>
-                <a href="widerruf.html" class="mx-2 text-decoration-none text-muted footer-link">Widerrufsbelehrung</a>
+                <a href="Impressum.html" class="mx-2 text-decoration-none text-muted footer-link">Impressum</a>
+                <a href="Datenschutz.html" class="mx-2 text-decoration-none text-muted footer-link">Datenschutz</a>
+                <a href="Widerruf.html" class="mx-2 text-decoration-none text-muted footer-link">Widerrufsbelehrung</a>
                 <a href="agb.html" class="mx-2 text-decoration-none text-muted footer-link">AGB</a>
             </div>
             <p class="mb-1">&copy; 2026 LUXE BERLIN. Alle Rechte vorbehalten.</p>
