--- a/frontend/login.html
+++ b/frontend/login.html
@@ -142,6 +142,11 @@
     </div>
 
     <script>
+        // --- DINAMİK API YAPILANDIRMASI ---
+        const API_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+            ? 'http://localhost:5000/api'
+            : '/api';
+
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
 
@@ -149,7 +154,8 @@
             const password = document.getElementById('pass').value;
 
             try {
-                const response = await fetch('http://localhost:5000/api/auth/login', {
+                // Değiştirilen satır: Sabit link yerine dinamik API_URL kullanıldı
+                const response = await fetch(`${API_URL}/auth/login`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ username, password })
@@ -158,7 +164,6 @@
                 const data = await response.json();
 
                 if (response.ok) {
-                    // Giriş kartını (Token) tarayıcıya güvenli şekilde sakla
                     localStorage.setItem('adminToken', data.token);
                     window.location.href = 'admin.html';
                 } else {
@@ -166,7 +171,7 @@
                 }
             } catch (err) {
                 console.error("Login Fehler:", err);
-                alert("Serververbindung fehlgeschlagen!");
+                alert("Serververbindung fehlgeschlagen! Lütfen AdBlocker'ı kapatıp tekrar deneyin.");
             }
         });
     </script>
