--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -16,8 +16,10 @@
         .table-scroll-container {
             max-height: 450px;
             overflow-y: auto;
+            overflow-x: auto;
             border-radius: 8px;
             border: 1px solid #eee;
+            -webkit-overflow-scrolling: touch;
         }
 
         /* Tablo Başlıklarını Sabitleme */
@@ -27,6 +29,7 @@
             background-color: #f8f9fa;
             z-index: 10;
             border-bottom: 2px solid #dee2e6;
+            white-space: nowrap;
         }
 
         .sticky-card {
@@ -37,10 +40,17 @@
             padding-right: 5px;
         }
 
-        /* Custom Scrollbar */
+        @media (max-width: 991px) {
+            .sticky-card {
+                position: static;
+                max-height: none;
+            }
+        }
+
         .table-scroll-container::-webkit-scrollbar,
         .sticky-card::-webkit-scrollbar {
             width: 4px;
+            height: 4px;
         }
 
         .table-scroll-container::-webkit-scrollbar-thumb,
@@ -58,6 +68,7 @@
             justify-content: center;
             border-radius: 4px;
             border: 1px solid #eee;
+            flex-shrink: 0;
         }
 
         .product-img-box-small img {
@@ -83,7 +94,6 @@
             color: white !important;
         }
 
-        /* Admin Cevap Stili */
         .admin-reply-badge {
             font-size: 0.7rem;
             padding: 3px 8px;
@@ -100,42 +110,43 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top"
         style="background-color: #1c2541; border-bottom: 3px solid #c5a059;">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">LUXE<span style="color:#c5a059;">BERLIN</span> ADMIN</a>
-            <div class="ms-auto">
+            <a class="navbar-brand fw-bold" href="#">LUXE<span>BERLIN</span> ADMIN</a>
+            <div class="ms-auto d-flex align-items-center">
                 <button class="btn btn-outline-warning btn-sm me-2" onclick="logout()">Abmelden</button>
-                <a href="index.html" class="btn btn-outline-light btn-sm px-3">Storefront</a>
+                <a href="index.html" class="btn btn-outline-light btn-sm px-3 d-none d-sm-inline-block">Storefront</a>
             </div>
         </div>
     </nav>
 
-    <main id="adminMainContent" class="container py-5 d-none">
-        <div class="row g-4 mb-4 text-center text-white">
-            <div class="col-md-4">
-                <div class="p-4 rounded-4 shadow-sm" style="background:#1c2541;">
-                    <p class="small text-uppercase mb-1 opacity-75">Bestellungen</p>
-                    <h2 id="stat-count" class="fw-bold">0</h2>
+    <main id="adminMainContent" class="container py-4 py-md-5 d-none">
+        <div class="row g-3 g-md-4 mb-4 text-center text-white">
+            <div class="col-6 col-md-4">
+                <div class="p-3 p-md-4 rounded-4 shadow-sm h-100" style="background:#1c2541;">
+                    <p class="small text-uppercase mb-1 opacity-75" style="font-size: 0.7rem;">Bestellungen</p>
+                    <h2 id="stat-count" class="fw-bold mb-0">0</h2>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="p-4 rounded-4 shadow-sm" style="background:#c5a059;">
-                    <p class="small text-uppercase mb-1 opacity-75">Umsatz</p>
-                    <h2 id="stat-revenue" class="fw-bold">0,00 €</h2>
+            <div class="col-6 col-md-4">
+                <div class="p-3 p-md-4 rounded-4 shadow-sm h-100" style="background:#c5a059;">
+                    <p class="small text-uppercase mb-1 opacity-75" style="font-size: 0.7rem;">Umsatz</p>
+                    <h2 id="stat-revenue" class="fw-bold mb-0" style="font-size: 1.2rem;">0,00 €</h2>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="p-4 rounded-4 shadow-sm" style="background:#212529;">
-                    <p class="small text-uppercase mb-1 opacity-75">Kunden</p>
-                    <h2 id="stat-customers" class="fw-bold">0</h2>
+            <div class="col-12 col-md-4">
+                <div class="p-3 p-md-4 rounded-4 shadow-sm h-100" style="background:#212529;">
+                    <p class="small text-uppercase mb-1 opacity-75" style="font-size: 0.7rem;">Kunden</p>
+                    <h2 id="stat-customers" class="fw-bold mb-0">0</h2>
                 </div>
             </div>
         </div>
 
-        <div class="row mb-5">
+        <div class="row mb-4">
             <div class="col-12">
-                <div class="card border-0 shadow-sm rounded-4 p-4">
-                    <div class="d-flex justify-content-between align-items-center mb-4">
+                <div class="card border-0 shadow-sm rounded-4 p-3 p-md-4">
+                    <div
+                        class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
                         <h5 class="fw-bold mb-0 text-navy">📈 Verkaufsstatistik</h5>
-                        <div class="btn-group btn-group-sm shadow-sm">
+                        <div class="btn-group btn-group-sm shadow-sm overflow-hidden" style="max-width: fit-content;">
                             <button class="btn btn-outline-dark btn-chart-toggle px-3"
                                 onclick="changeChartMode('daily')">Tag</button>
                             <button class="btn btn-outline-dark btn-chart-toggle px-3"
@@ -144,16 +155,16 @@
                                 onclick="changeChartMode('monthly')">Monat</button>
                         </div>
                     </div>
-                    <div style="height: 300px;"><canvas id="salesChart"></canvas></div>
+                    <div style="height: 300px; min-height: 250px;"><canvas id="salesChart"></canvas></div>
                 </div>
             </div>
         </div>
 
-        <div class="card border-0 shadow-sm rounded-4 mb-5">
-            <div class="card-body p-4">
-                <div class="d-flex justify-content-between align-items-center mb-4">
+        <div class="card border-0 shadow-sm rounded-4 mb-4">
+            <div class="card-body p-3 p-md-4">
+                <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
                     <h4 class="fw-bold mb-0">Bestellungsverwaltung</h4>
-                    <input type="text" id="orderSearch" class="form-control w-50 rounded-pill"
+                    <input type="text" id="orderSearch" class="form-control w-100 w-md-50 rounded-pill"
                         placeholder="Müşteri adına göre ara...">
                 </div>
                 <div class="table-scroll-container">
@@ -175,9 +186,13 @@
             </div>
         </div>
 
-        <div class="card border-0 shadow-sm rounded-4 mb-5">
-            <div class="card-body p-4">
-                <h4 class="fw-bold mb-4">Rezensionen verwalten (Yorumlar)</h4>
+        <div class="card border-0 shadow-sm rounded-4 mb-4">
+            <div class="card-body p-3 p-md-4">
+                <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 gap-3">
+                    <h4 class="fw-bold mb-0">Rezensionen verwalten</h4>
+                    <input type="text" id="reviewSearch" class="form-control w-100 w-md-50 rounded-pill"
+                        placeholder="Yorum metni veya isimde ara...">
+                </div>
                 <div class="table-scroll-container">
                     <table class="table table-hover align-middle mb-0">
                         <thead class="small fw-bold text-uppercase">
@@ -196,8 +211,8 @@
             </div>
         </div>
 
-        <section class="row g-4 mb-5">
-            <div class="col-lg-4">
+        <section class="row g-4 mb-4">
+            <div class="col-lg-4 order-2 order-lg-1">
                 <div class="card p-4 shadow-sm border-0 rounded-4 sticky-card">
                     <h5 id="productFormTitle" class="fw-bold mb-3 text-navy">Produkt verwalten</h5>
                     <form id="productForm">
@@ -208,11 +223,12 @@
                                 step="0.01" required></div>
                         <div class="mb-2">
                             <label class="small fw-bold opacity-75 mb-1 text-navy">Lagerbestand (Stok)</label>
-                            <input type="number" id="pStock" class="form-control border-primary-subtle"
-                                placeholder="Anzahl" min="0" required>
+                            <input type="number" id="pStock" class="form-control" placeholder="Anzahl" min="0" required>
                         </div>
-                        <div class="mb-2"><label class="small fw-bold opacity-75 mb-1">Produktbild</label><input
-                                type="file" id="pImageFile" class="form-control" accept="image/*"></div>
+                        <div class="mb-2">
+                            <label class="small fw-bold opacity-75 mb-1">Produktbild</label>
+                            <input type="file" id="pImageFile" class="form-control" accept="image/*">
+                        </div>
                         <div id="imagePreview" class="mb-3 text-center d-none"><img src="" id="previewImg" width="100"
                                 class="rounded border shadow-sm"></div>
                         <div class="mb-3"><textarea id="pDesc" class="form-control" placeholder="Beschreibung" rows="3"
@@ -225,11 +241,12 @@
                 </div>
             </div>
 
-            <div class="col-lg-8">
-                <div class="card p-4 shadow-sm border-0 rounded-4">
-                    <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="col-lg-8 order-1 order-lg-2">
+                <div class="card p-3 p-md-4 shadow-sm border-0 rounded-4 h-100">
+                    <div
+                        class="d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-3 gap-3">
                         <h5 class="fw-bold mb-0">Inventar & Bestand</h5>
-                        <input type="text" id="productSearch" class="form-control w-50 rounded-pill"
+                        <input type="text" id="productSearch" class="form-control w-100 w-md-50 rounded-pill"
                             placeholder="Ürün adına göre ara...">
                     </div>
                     <div class="table-scroll-container" style="max-height: 400px;">
@@ -239,7 +256,7 @@
                                     <th>Bild</th>
                                     <th>Name</th>
                                     <th>Preis</th>
-                                    <th>Lager (Stok)</th>
+                                    <th>Lager</th>
                                     <th class="text-end">Aktion</th>
                                 </tr>
                             </thead>
@@ -259,17 +276,16 @@
             </div>
         </section>
 
-        <div class="card border-0 shadow-sm rounded-4 mb-5">
-            <div class="card-body p-4">
-                <h5 class="fw-bold mb-3 text-navy">🖥️ System-Aktivitätsprotokoll</h5>
-                <div class="table-responsive"
-                    style="max-height: 250px; overflow-y: auto; border: 1px solid #eee; border-radius: 8px;">
+        <div class="card border-0 shadow-sm rounded-4 mb-4">
+            <div class="card-body p-3 p-md-4">
+                <h5 class="fw-bold mb-3 text-navy">🖥️ Aktivitätsprotokoll</h5>
+                <div class="table-scroll-container" style="max-height: 250px;">
                     <table class="table table-sm small mb-0">
                         <thead class="bg-light sticky-log-header fw-bold">
                             <tr>
-                                <th>Zeitpunkt</th>
+                                <th>Zeit</th>
                                 <th>Aktion</th>
-                                <th>Benutzer</th>
+                                <th>User</th>
                                 <th>Status</th>
                             </tr>
                         </thead>
@@ -293,7 +309,7 @@
                 </div>
             </div>
             <div class="col-lg-8">
-                <div class="card p-4 shadow-sm border-0 rounded-4 h-100">
+                <div class="card p-3 p-md-4 shadow-sm border-0 rounded-4 h-100">
                     <h5 class="fw-bold mb-3">Aktive Administratoren</h5>
                     <div class="table-scroll-container" style="max-height: 250px;">
                         <table class="table align-middle mb-0">
@@ -306,13 +322,13 @@
     </main>
 
     <div class="modal fade" id="orderDetailModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
             <div class="modal-content border-0 shadow-lg rounded-4">
                 <div class="modal-header bg-dark text-white rounded-top-4">
                     <h5 class="modal-title fw-bold">Bestellungsdetails</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
-                <div id="modal-content-area" class="modal-body p-4"></div>
+                <div id="modal-content-area" class="modal-body p-3 p-md-4"></div>
             </div>
         </div>
     </div>
@@ -320,8 +336,8 @@
     <div class="modal fade" id="replyModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content border-0 shadow-lg rounded-4">
-                <div class="modal-header bg-navy text-white" style="background: #1c2541;">
-                    <h5 class="modal-title">Antworten (Cevapla)</h5>
+                <div class="modal-header text-white" style="background: #1c2541;">
+                    <h5 class="modal-title">Antworten</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
@@ -332,7 +348,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">Schließen</button>
-                    <button type="button" class="btn btn-gold px-4" onclick="submitReply()">Senden</button>
+                    <button type="button" class="btn btn-gold px-4"
+                        style="background: #c5a059; color: white; border:none;" onclick="submitReply()">Senden</button>
                 </div>
             </div>
         </div>
@@ -340,7 +357,6 @@
 
     <script src="admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (localStorage.getItem('adminToken')) {
