--- a/frontend/success.html
+++ b/frontend/success.html
@@ -52,7 +52,6 @@
             stroke-width: 2;
             stroke: var(--gold);
             stroke-miterlimit: 10;
-            box-shadow: inset 0px 0px 0px var(--gold);
             animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
         }
 
@@ -113,6 +112,7 @@
             color: var(--gold);
         }
 
+        /* --- TIKLA-KOPYALA ANİMASYONU --- */
         .order-id-box {
             background: rgba(197, 160, 89, 0.1);
             border: 1px dashed var(--gold);
@@ -121,6 +121,38 @@
             display: inline-block;
             font-family: monospace;
             font-size: 1.1rem;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            position: relative;
+        }
+
+        .order-id-box:hover {
+            background: rgba(197, 160, 89, 0.2);
+            transform: scale(1.02);
+        }
+
+        .copy-feedback {
+            position: absolute;
+            top: -25px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: var(--navy);
+            color: white;
+            padding: 5px 12px;
+            border-radius: 5px;
+            font-size: 0.7rem;
+            font-family: 'Montserrat', sans-serif;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            pointer-events: none;
+            white-space: nowrap;
+        }
+
+        .order-id-box.copied .copy-feedback {
+            opacity: 1;
+            visibility: visible;
+            top: -45px;
         }
 
         .summary-item {
@@ -175,8 +207,13 @@
                         </div>
                         <h1 style="font-family:'Playfair Display';">Vielen Dank!</h1>
                         <p class="opacity-75">Ihre Bestellung wurde erfolgreich entgegengenommen.</p>
-                        <div class="order-id-box mt-2">
+
+                        <div class="order-id-box mt-2" onclick="copyOrderId()" id="idBox">
+                            <div class="copy-feedback" id="copyBadge">Kopiert! ✓</div>
                             Bestell-ID: <span id="orderIdText" class="fw-bold">Laden...</span>
+                            <small style="display: block; font-size: 0.65rem; opacity: 0.7; margin-top: 3px;">
+                                (Klicken zum Kopieren)
+                            </small>
                         </div>
                     </div>
 
@@ -201,8 +238,8 @@
                             <h5 class="fw-bold mb-3">Nächste Schritte</h5>
                             <div class="d-flex align-items-center mb-3">
                                 <div class="next-steps-icon">📧</div>
-                                <div class="small">Sie erhalten in Kürze eine <strong>Bestätigungs-E-Mail</strong> mit
-                                    allen Details.</div>
+                                <div class="small">Sie erhalten in Kürze eine <strong>Bestätigungs-E-Mail</strong>.
+                                </div>
                             </div>
                             <div class="d-flex align-items-center">
                                 <div class="next-steps-icon">🚚</div>
@@ -218,9 +255,6 @@
                         </div>
                     </div>
                 </div>
-                <p class="text-center mt-4 text-muted small">
-                    Haben Sie Fragen? <a href="contact.html" class="text-dark fw-bold">Kontaktieren Sie uns</a>
-                </p>
             </div>
         </div>
     </div>
