--- a/frontend/track.html
+++ b/frontend/track.html
@@ -37,7 +37,7 @@
                     <div id="track-result" class="d-none mt-5 result-animation">
                         <div id="status-header" class="mb-4 text-start border-bottom pb-3"></div>
 
-                        <div class="track-container">
+                        <div class="track-container" id="track-container">
                             <div class="progress-line-fill" id="progress-line"></div>
 
                             <div class="step" id="step-pending">
@@ -58,6 +58,8 @@
                             </div>
                         </div>
 
+                        <div id="dynamic-info-area"></div>
+
                         <div class="order-details-box text-start staggered-item">
                             <h5 class="fw-bold mb-3 border-bottom pb-2">Bestellte Produkte</h5>
                             <div id="order-items-list"></div>
@@ -74,7 +76,7 @@
                             </div>
                         </div>
 
-                        <p class="mt-4 small text-muted italic staggered-item">Vielen Dank für Ihr Vertrauen in LUXE
+                        <p class="mt-5 small text-muted italic staggered-item">Vielen Dank für Ihr Vertrauen in LUXE
                             BERLIN! ✨</p>
                     </div>
                 </div>
