--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE BERLIN | Kontakt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
@@ -21,13 +22,13 @@
     </nav>
 
     <div class="container py-5 mt-md-4">
-        <div class="row g-0 success-card overflow-hidden shadow-lg rounded-4">
+        <div class="row g-0 success-card overflow-hidden shadow-lg rounded-4" data-aos="fade-up">
             <div class="col-lg-5 contact-info-panel p-5 d-flex flex-column justify-content-center text-white"
-                style="background: #1c2541;">
+                style="background: #1c2541;" data-aos="fade-right" data-aos-delay="200">
                 <h2 class="display-6 fw-bold mb-4" style="font-family:'Playfair Display';">Kontakt-Infos</h2>
                 <p class="opacity-75 mb-5">Haben Sie Fragen? Wir sind 24/7 für Sie erreichbar.</p>
 
-                <div class="mb-4 d-flex align-items-center">
+                <div class="mb-4 d-flex align-items-center" data-aos="fade-up" data-aos-delay="400">
                     <div class="info-icon me-3">📍</div>
                     <div>
                         <h6 class="mb-0 fw-bold">Adresse</h6>
@@ -35,7 +36,7 @@
                     </div>
                 </div>
 
-                <div class="mb-4 d-flex align-items-center">
+                <div class="mb-4 d-flex align-items-center" data-aos="fade-up" data-aos-delay="500">
                     <div class="info-icon me-3">📞</div>
                     <div>
                         <h6 class="mb-0 fw-bold">Telefon</h6>
@@ -43,7 +44,7 @@
                     </div>
                 </div>
 
-                <div class="mb-5 d-flex align-items-center">
+                <div class="mb-5 d-flex align-items-center" data-aos="fade-up" data-aos-delay="600">
                     <div class="info-icon me-3">✉️</div>
                     <div>
                         <h6 class="mb-0 fw-bold">E-Mail</h6>
@@ -51,14 +52,14 @@
                     </div>
                 </div>
 
-                <div class="social-links mt-auto">
+                <div class="social-links mt-auto" data-aos="fade-in" data-aos-delay="800">
                     <span class="small text-uppercase opacity-50 d-block mb-3">Folgen Sie uns</span>
                     <a href="#" class="text-white text-decoration-none me-3">Instagram</a>
                     <a href="#" class="text-white text-decoration-none">TikTok</a>
                 </div>
             </div>
 
-            <div class="col-lg-7 bg-white p-5">
+            <div class="col-lg-7 bg-white p-5" data-aos="fade-left" data-aos-delay="300">
                 <form id="contactForm">
                     <div class="row">
                         <div class="col-md-6 mb-3">
@@ -96,6 +97,17 @@
 
     <script src="contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+
+    </script>
 </body>
+<div id="preloader">
+    <div class="preloader-content">
+        <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+        <div class="preloader-bar"></div>
+        <p class="preloader-text">Exklusive Mode wird geladen...</p>
+    </div>
+</div>
 
 </html>
