--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <title>LUXE BERLIN | Official Store</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Montserrat:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -46,11 +47,11 @@
 
     <header class="hero-section">
         <div class="container text-center text-white">
-            <h1 class="display-3 fw-bold">Zeitlose Eleganz</h1>
+            <h1 class="display-3 fw-bold" data-aos="fade-up">Zeitlose Eleganz</h1>
         </div>
     </header>
 
-    <section class="container mt-5 pt-4">
+    <section class="container mt-5 pt-4" data-aos="fade-up" data-aos-delay="200">
         <div class="search-container text-center">
             <div class="search-input-wrapper">
                 <span class="search-icon-fixed">🔍</span>
@@ -61,18 +62,18 @@
         </div>
     </section>
 
-    <main class="container my-5 py-4" id="produkte">
+    <main class="container my-5 py-4" id="produkte" data-aos="fade-up">
         <div id="product-grid-container" class="row g-4"></div>
     </main>
 
     <section id="testimonials" class="py-5 bg-light border-top border-bottom">
         <div class="container">
-            <div class="text-center mb-5">
+            <div class="text-center mb-5" data-aos="fade-down">
                 <h2 class="display-5 fw-bold" style="font-family: 'Playfair Display';">Kundenstimmen</h2>
                 <div class="gold-divider mx-auto"></div>
             </div>
 
-            <div id="testimonial-container" class="row g-4 mb-2"></div>
+            <div id="testimonial-container" class="row g-4 mb-2" data-aos="fade-up"></div>
 
             <div class="text-center mt-4 mb-5" id="show-more-reviews-wrapper" style="display: none;">
                 <button id="showMoreReviewsBtn" class="btn btn-outline-dark rounded-pill px-5 fw-bold">MEHR
@@ -80,7 +81,7 @@
             </div>
 
             <div id="verified-review-box" class="col-lg-8 mx-auto p-4 rounded-4 shadow-sm bg-white"
-                style="display: none;">
+                style="display: none;" data-aos="zoom-in">
                 <h4 class="fw-bold mb-2 text-center">Teilen Sie Ihre Erfahrung</h4>
                 <p class="text-center small text-muted mb-4">Verbleibende Bewertungen: <span
                         id="remaining-reviews">2</span></p>
@@ -144,18 +145,19 @@
 
     <section class="social-area py-5" id="social">
         <div class="container text-center">
-            <h2 class="mb-5" style="font-family:'Playfair Display'; color: var(--midnight);">@LUXEBERLIN_OFFICIAL</h2>
+            <h2 class="mb-5" style="font-family:'Playfair Display'; color: var(--midnight);" data-aos="fade-in">
+                @LUXEBERLIN_OFFICIAL</h2>
             <div class="row g-3">
-                <div class="col-6 col-md-3"><img
+                <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="100"><img
                         src="https://images.unsplash.com/photo-1549298916-b41d501d3772?q=80&w=400&h=400&fit=crop"
                         class="img-fluid rounded shadow-sm insta-img" alt="Luxe Fashion"></div>
-                <div class="col-6 col-md-3"><img
+                <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="200"><img
                         src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?q=80&w=400&h=400&fit=crop"
                         class="img-fluid rounded shadow-sm insta-img" alt="Minimalist"></div>
-                <div class="col-6 col-md-3"><img
+                <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="300"><img
                         src="https://images.unsplash.com/photo-1549298916-b41d501d3772?q=80&w=400&h=400&fit=crop"
                         class="img-fluid rounded shadow-sm insta-img" alt="Luxe Fashion"></div>
-                <div class="col-6 col-md-3"><img
+                <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="400"><img
                         src="https://images.unsplash.com/photo-1483985988355-763728e1935b?q=80&w=400&h=400&fit=crop"
                         class="img-fluid rounded shadow-sm insta-img" alt="Luxe Life"></div>
             </div>
@@ -222,7 +224,18 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+
+    </script>
     <script src="main.js"></script>
 </body>
+<div id="preloader">
+    <div class="preloader-content">
+        <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+        <div class="preloader-bar"></div>
+        <p class="preloader-text">Exklusive Mode wird geladen...</p>
+    </div>
+</div>
 
 </html>
