--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,127 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE BERLIN | Admin Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
-    <style>
-        :root {
-            --navy: #1c2541;
-            --gold: #c5a059;
-            --white: #ffffff;
-        }
-
-        body {
-            background: linear-gradient(135deg, #0b0e17 0%, #1c2541 100%);
-            font-family: 'Montserrat', sans-serif;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 0;
-            overflow: hidden;
-        }
-
-        .login-container {
-            width: 100%;
-            max-width: 420px;
-            padding: 20px;
-        }
-
-        .login-card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 25px;
-            padding: 50px 40px;
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
-            text-align: center;
-            color: var(--white);
-        }
-
-        .brand-logo {
-            font-family: 'Playfair Display', serif;
-            font-size: 2rem;
-            letter-spacing: 3px;
-            margin-bottom: 40px;
-            text-transform: uppercase;
-        }
-
-        .brand-logo span {
-            color: var(--gold);
-        }
-
-        .form-control {
-            background: rgba(255, 255, 255, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 12px;
-            padding: 12px 20px;
-            color: var(--white);
-            margin-bottom: 20px;
-            transition: 0.3s;
-        }
-
-        .form-control:focus {
-            background: rgba(255, 255, 255, 0.15);
-            border-color: var(--gold);
-            box-shadow: none;
-            color: var(--white);
-        }
-
-        .form-control::placeholder {
-            color: rgba(255, 255, 255, 0.4);
-            font-size: 0.9rem;
-        }
-
-        .btn-login {
-            background: var(--gold);
-            border: none;
-            border-radius: 12px;
-            padding: 14px;
-            width: 100%;
-            font-weight: 600;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            color: var(--navy);
-            transition: 0.4s;
-            margin-top: 10px;
-        }
-
-        .btn-login:hover {
-            background: #d4b16a;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(197, 160, 89, 0.2);
-        }
-
-        .footer-text {
-            margin-top: 30px;
-            font-size: 0.75rem;
-            opacity: 0.5;
-            letter-spacing: 1px;
-        }
-
-        .back-link {
-            display: block;
-            margin-top: 20px;
-            color: var(--gold);
-            text-decoration: none;
-            font-size: 0.8rem;
-            transition: 0.3s;
-        }
-
-        .back-link:hover {
-            color: var(--white);
-        }
-    </style>
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
 
-    <div class="login-container">
+    <div class="login-container" data-aos="zoom-in" data-aos-duration="1000">
         <div class="login-card">
-            <div class="brand-logo">LUXE<span>BERLIN</span></div>
+            <div class="brand-logo" data-aos="fade-down" data-aos-delay="300">LUXE<span>BERLIN</span></div>
 
-            <form id="loginForm">
+            <form id="loginForm" data-aos="fade-up" data-aos-delay="500">
                 <div class="mb-1 text-start small opacity-50 ps-2 mb-2">Benutzername</div>
                 <input type="text" id="user" class="form-control" placeholder="Admin-ID eingeben" required>
 
@@ -136,10 +29,40 @@
                 <button type="submit" class="btn btn-login">Internal Access</button>
             </form>
 
-            <a href="index.html" class="back-link">← Zurück zum Shop</a>
-            <div class="footer-text">SECURE ADMIN GATEWAY | v2.0</div>
+            <a href="index.html" class="back-link" data-aos="fade-in" data-aos-delay="800">← Zurück zum Shop</a>
+            <div class="footer-text" data-aos="fade-in" data-aos-delay="1000">SECURE ADMIN GATEWAY | v2.0</div>
         </div>
     </div>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        // PRE LOADER LOGIC**
+        window.addEventListener("load", function () {
+            const preloader = document.getElementById("preloader");
+            if (preloader) {
+                setTimeout(() => {
+                    preloader.classList.add("preloader-hidden");
+                    setTimeout(() => {
+                        if (typeof AOS !== 'undefined') {
+                            AOS.init({
+                                duration: 1000,
+                                once: true,
+                                offset: 100,
+                                disableMutationObserver: false
+                            });
+                            AOS.refresh();
+                        }
+                        const adminContent = document.getElementById('adminMainContent');
+                        if (adminContent && localStorage.getItem('adminToken')) {
+                            adminContent.classList.remove('d-none');
+                            setTimeout(() => AOS.refresh(), 100);
+                        }
+                        preloader.style.display = "none";
+                    }, 1000);
+                }, 1200);
+            }
+        });
+    </script>
 
     <script>
         // --- DINAMİK API YAPILANDIRMASI ---
@@ -154,7 +77,6 @@
             const password = document.getElementById('pass').value;
 
             try {
-                // Değiştirilen satır: Sabit link yerine dinamik API_URL kullanıldı
                 const response = await fetch(`${API_URL}/auth/login`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -176,5 +98,12 @@
         });
     </script>
 </body>
+<div id="preloader">
+    <div class="preloader-content">
+        <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+        <div class="preloader-bar"></div>
+        <p class="preloader-text">Exklusive Mode wird geladen...</p>
+    </div>
+</div>
 
 </html>
