--- a/frontend/payment.html
+++ b/frontend/payment.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasse | Luxe Berlin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
@@ -15,9 +16,9 @@
 
 <body class="bg-light min-vh-100 py-md-5">
 
-    <div class="container checkout-container-compact shadow-lg bg-white p-0">
+    <div class="container checkout-container-compact shadow-lg bg-white p-0" data-aos="fade-up">
         <div class="row g-0">
-            <div class="col-lg-7 p-4 p-md-5 border-end checkout-main">
+            <div class="col-lg-7 p-4 p-md-5 border-end checkout-main" data-aos="fade-right" data-aos-delay="200">
                 <a href="index.html" class="text-muted text-decoration-none small fw-bold">← WEITER EINKAUFEN</a>
                 <h2 class="mt-3 mb-4" style="font-family:'Playfair Display';">Kasse</h2>
 
@@ -91,7 +92,8 @@
                 </form>
             </div>
 
-            <div class="col-lg-5 checkout-aside p-4 p-md-5 text-white d-flex flex-column" style="background: #1c2541;">
+            <div class="col-lg-5 checkout-aside p-4 p-md-5 text-white d-flex flex-column" style="background: #1c2541;"
+                data-aos="fade-left" data-aos-delay="400">
                 <div class="d-flex justify-content-between mb-4 align-items-center">
                     <h3 class="mb-0" style="font-family:'Playfair Display';">Übersicht</h3>
                     <button type="button" class="btn btn-sm btn-outline-light rounded-pill px-3 opacity-75"
@@ -124,7 +126,8 @@
                 </div>
 
                 <button type="submit" form="checkoutForm" class="btn-order-submit py-3 w-100 mt-4 shadow"
-                    style="background: #c5a059; color: #1c2541; border: none; font-weight: bold;">
+                    style="background: #c5a059; color: #1c2541; border: none; font-weight: bold;" data-aos="zoom-in"
+                    data-aos-delay="600">
                     ZAHLUNGSPFLICHTIG BESTELLEN
                 </button>
             </div>
@@ -150,7 +153,18 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+
+    </script>
     <script src="payment.js"></script>
 </body>
+<div id="preloader">
+    <div class="preloader-content">
+        <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+        <div class="preloader-bar"></div>
+        <p class="preloader-text">Exklusive Mode wird geladen...</p>
+    </div>
+</div>
 
 </html>
