--- a/frontend/success.html
+++ b/frontend/success.html
@@ -6,249 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE BERLIN | Erfolg</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
-    <style>
-        :root {
-            --gold: #c5a059;
-            --navy: #1c2541;
-            --platinum: #f8f9fa;
-        }
-
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: var(--platinum);
-            color: var(--navy);
-        }
-
-        .success-card {
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-            border: none;
-            overflow: hidden;
-            animation: fadeInContainer 1s ease-out;
-        }
-
-        .success-header {
-            background: var(--navy);
-            color: white;
-            padding: 40px;
-        }
-
-        /* --- PREMIUM CHECK ANIMATION --- */
-        .check-container {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .checkmark {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            display: block;
-            stroke-width: 2;
-            stroke: var(--gold);
-            stroke-miterlimit: 10;
-            animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
-        }
-
-        .checkmark__circle {
-            stroke-dasharray: 166;
-            stroke-dashoffset: 166;
-            stroke-width: 2;
-            stroke-miterlimit: 10;
-            stroke: var(--gold);
-            fill: none;
-            animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
-        }
-
-        .checkmark__check {
-            transform-origin: 50% 50%;
-            stroke-dasharray: 48;
-            stroke-dashoffset: 48;
-            animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-        }
-
-        @keyframes stroke {
-            100% {
-                stroke-dashoffset: 0;
-            }
-        }
-
-        @keyframes scale {
-
-            0%,
-            100% {
-                transform: none;
-            }
-
-            50% {
-                transform: scale3d(1.1, 1.1, 1);
-            }
-        }
-
-        @keyframes fill {
-            100% {
-                box-shadow: inset 0px 0px 0px 50px rgba(197, 160, 89, 0.1);
-            }
-        }
-
-        @keyframes fadeInContainer {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .gold-text {
-            color: var(--gold);
-        }
-
-        /* --- TIKLA-KOPYALA ANİMASYONU --- */
-        .order-id-box {
-            background: rgba(197, 160, 89, 0.1);
-            border: 1px dashed var(--gold);
-            padding: 10px 20px;
-            border-radius: 10px;
-            display: inline-block;
-            font-family: monospace;
-            font-size: 1.1rem;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            position: relative;
-        }
-
-        .order-id-box:hover {
-            background: rgba(197, 160, 89, 0.2);
-            transform: scale(1.02);
-        }
-
-        .copy-feedback {
-            position: absolute;
-            top: -25px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: var(--navy);
-            color: white;
-            padding: 5px 12px;
-            border-radius: 5px;
-            font-size: 0.7rem;
-            font-family: 'Montserrat', sans-serif;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-            pointer-events: none;
-            white-space: nowrap;
-        }
-
-        .order-id-box.copied .copy-feedback {
-            opacity: 1;
-            visibility: visible;
-            top: -45px;
-        }
-
-        .summary-item {
-            border-bottom: 1px solid #eee;
-            padding: 12px 0;
-        }
-
-        .summary-item:last-child {
-            border-bottom: none;
-        }
-
-        .next-steps-icon {
-            width: 40px;
-            height: 40px;
-            background: var(--platinum);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 15px;
-            font-size: 1.2rem;
-        }
-
-        .btn-gold {
-            background: var(--gold);
-            color: white;
-            border-radius: 50px;
-            padding: 12px 30px;
-            font-weight: 700;
-            transition: 0.3s;
-            border: none;
-        }
-
-        .btn-gold:hover {
-            background: var(--navy);
-            transform: translateY(-2px);
-        }
-    </style>
+    <link rel="stylesheet" href="success.css">
 </head>
 
 <body>
+    <div id="preloader">
+        <div class="preloader-content">
+            <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+            <div class="preloader-bar"></div>
+            <p class="preloader-text">Exklusive Mode wird geladen...</p>
+        </div>
+    </div>
+
     <div class="container py-5">
         <div class="row justify-content-center">
-            <div class="col-md-9 col-lg-7">
+            <div class="col-md-9 col-lg-7" data-aos="fade-up">
                 <div class="card success-card">
                     <div class="success-header text-center">
-                        <div class="check-container">
-                            <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                        <div class="check-container" data-aos="zoom-in" data-aos-delay="300">
+                            <svg class="checkmark" viewBox="0 0 52 52">
                                 <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none" />
                                 <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
                             </svg>
                         </div>
-                        <h1 style="font-family:'Playfair Display';">Vielen Dank!</h1>
-                        <p class="opacity-75">Ihre Bestellung wurde erfolgreich entgegengenommen.</p>
+                        <h1 style="font-family:'Playfair Display';" data-aos="fade-down">Vielen Dank!</h1>
+                        <p class="opacity-75" data-aos="fade-in" data-aos-delay="400">Ihre Bestellung wurde erfolgreich
+                            entgegengenommen.</p>
 
-                        <div class="order-id-box mt-2" onclick="copyOrderId()" id="idBox">
+                        <div class="order-id-box mt-2" onclick="copyOrderId()" id="idBox" data-aos="fade-up"
+                            data-aos-delay="500">
                             <div class="copy-feedback" id="copyBadge">Kopiert! ✓</div>
                             Bestell-ID: <span id="orderIdText" class="fw-bold">Laden...</span>
-                            <small style="display: block; font-size: 0.65rem; opacity: 0.7; margin-top: 3px;">
-                                (Klicken zum Kopieren)
-                            </small>
+                            <small style="display: block; font-size: 0.65rem; opacity: 0.7; margin-top: 3px;">(Klicken
+                                zum Kopieren)</small>
                         </div>
                     </div>
 
                     <div class="card-body p-4 p-md-5">
-                        <div class="mb-5">
+                        <div class="mb-5" data-aos="fade-up" data-aos-delay="600">
                             <h5 class="fw-bold mb-3 border-bottom pb-2">Bestellübersicht</h5>
-                            <div id="summary-list">
-                                <p class="text-muted small">Wird geladen...</p>
-                            </div>
+                            <div id="summary-list"></div>
                             <div class="d-flex justify-content-between mt-3">
                                 <span class="fw-bold">Gesamtsumme:</span>
-                                <span class="fw-bold fs-4 gold-text" id="totalAmountText">0,00 €</span>
+                                <span class="fw-bold fs-4" style="color: var(--gold);" id="totalAmountText">0,00
+                                    €</span>
                             </div>
                         </div>
 
-                        <div class="mb-5 bg-light p-3 rounded-4">
+                        <div class="mb-5 bg-light p-3 rounded-4" data-aos="fade-up" data-aos-delay="700">
                             <h6 class="text-uppercase small fw-bold text-muted mb-2">Lieferadresse</h6>
                             <p class="mb-0 fw-semibold" id="addressText">--</p>
                         </div>
 
-                        <div class="mb-5">
-                            <h5 class="fw-bold mb-3">Nächste Schritte</h5>
-                            <div class="d-flex align-items-center mb-3">
-                                <div class="next-steps-icon">📧</div>
-                                <div class="small">Sie erhalten in Kürze eine <strong>Bestätigungs-E-Mail</strong>.
-                                </div>
-                            </div>
-                            <div class="d-flex align-items-center">
-                                <div class="next-steps-icon">🚚</div>
-                                <div class="small">Sobald Ihr Paket versendet wird, erhalten Sie eine
-                                    <strong>Tracking-Nummer</strong>.</div>
-                            </div>
-                        </div>
-
-                        <div class="d-grid gap-3">
+                        <div class="d-grid gap-3" data-aos="fade-up" data-aos-delay="800">
                             <a href="track.html" id="trackBtn" class="btn btn-gold">BESTELLUNG VERFOLGEN</a>
                             <a href="index.html" class="btn btn-link text-decoration-none text-muted small">Zurück zum
                                 Shop</a>
@@ -258,7 +72,12 @@
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+
+    </script>
     <script src="success.js"></script>
 </body>
 
