--- a/frontend/track.html
+++ b/frontend/track.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE BERLIN | Bestellverfolgung</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap"
         rel="stylesheet">
@@ -22,7 +23,7 @@
 
     <div class="container pb-5">
         <div class="row justify-content-center">
-            <div class="col-md-10 col-lg-8">
+            <div class="col-md-10 col-lg-8" data-aos="fade-up">
                 <div class="track-card text-center">
                     <h2 class="fw-bold mb-2" style="font-family: 'Playfair Display';">Bestellverfolgung</h2>
                     <p class="text-muted small mb-4">Verfolgen Sie Ihre Bestellung in Echtzeit.</p>
@@ -37,7 +38,7 @@
                     <div id="track-result" class="d-none mt-5 result-animation">
                         <div id="status-header" class="mb-4 text-start border-bottom pb-3"></div>
 
-                        <div class="track-container" id="track-container">
+                        <div class="track-container" id="track-container" data-aos="fade-in">
                             <div class="progress-line-fill" id="progress-line"></div>
 
                             <div class="step" id="step-pending">
@@ -60,7 +61,7 @@
 
                         <div id="dynamic-info-area"></div>
 
-                        <div class="order-details-box text-start staggered-item">
+                        <div class="order-details-box text-start staggered-item" data-aos="fade-up">
                             <h5 class="fw-bold mb-3 border-bottom pb-2">Bestellte Produkte</h5>
                             <div id="order-items-list"></div>
 
@@ -84,7 +85,18 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    </script>
     <script src="track.js"></script>
 </body>
+<div id="preloader">
+    <div class="preloader-content">
+        <div class="preloader-logo">LUXE<span>BERLIN</span></div>
+        <div class="preloader-bar"></div>
+        <p class="preloader-text">Exklusive Mode wird geladen...</p>
+    </div>
+</div>
 
 </html>
