--- a/frontend/Datenschutz.html
+++ b/frontend/Datenschutz.html
@@ -3,28 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutz | LUXE BERLIN</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-light">
-    <div class="container py-5 bg-white shadow-sm my-5 rounded-4 p-5" style="max-width: 800px;">
-        <h1>Datenschutzerklärung</h1>
-        <h3 class="mt-4">1. Datenschutz auf einen Blick</h3>
-        <p>Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen
-            Datenschutzvorschriften (DSGVO).</p>
+    <div class="container py-5">
+        <div class="bg-white shadow-sm rounded-4 p-4 p-md-5 mx-auto" style="max-width: 850px;">
+            <h1 class="playfair mb-5 border-bottom pb-3">Datenschutzerklärung</h1>
 
-        <h3 class="mt-4">2. Datenerfassung auf unserer Website</h3>
-        <p>Die Datenverarbeitung erfolgt durch den Websitebetreiber: [DEIN NAME VE ADRESSE].</p>
+            <h4 class="mt-4">1. Datenschutz auf einen Blick</h4>
+            <p class="text-muted">Wir nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre
+                personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie
+                dieser Datenschutzerklärung.</p>
 
-        <h3 class="mt-4">3. Zahlungsanbieter (Stripe / PayPal)</h3>
-        <p>Wenn Sie eine Zahlungsmethode von <strong>Stripe</strong> oder <strong>PayPal</strong> wählen, werden Ihre
-            Zahlungsdaten an diese Anbieter übermittelt. Dies ist für die Abwicklung Ihrer Bestellung gemäß Art. 6 Abs.
-            1 lit. b DSGVO erforderlich.</p>
+            <h4 class="mt-4">2. Datenerfassung auf unserer Website</h4>
+            <p><strong>Wer ist verantwortlich für die Datenerfassung?</strong><br>
+                Die Datenverarbeitung auf dieser Website erfolgt durch den Websitebetreiber: [DEIN NAME VE ADRESSE].</p>
 
-        <h3 class="mt-4">4. Ihre Rechte</h3>
-        <p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Herkunft, Empfänger und Zweck Ihrer
-            gespeicherten personenbezogenen Daten.</p>
+            <h4 class="mt-4">3. Hosting & E-Mail-Versand (Resend)</h4>
+            <p>Unsere Website wird bei <strong>Render.com</strong> gehostet. Für den Versand von Transaktions-E-Mails
+                (Bestellbestätigungen) nutzen wir den Dienst <strong>Resend</strong>. Diese Dienstleister verarbeiten
+                Daten in unserem Auftrag, um den Betrieb der Website und die Kommunikation mit Ihnen zu gewährleisten
+                (Art. 6 Abs. 1 lit. b DSGVO).</p>
+
+            <h4 class="mt-4">4. Zahlungsanbieter</h4>
+            <p>Zur Abwicklung von Zahlungen arbeiten wir mit Stripe und/oder PayPal zusammen. Ihre Zahlungsdaten werden
+                an diese Anbieter übermittelt, um die Transaktion sicher durchzuführen.</p>
+
+            <h4 class="mt-4">5. Ihre Rechte</h4>
+            <p>Sie haben jederzeit das Recht:</p>
+            <ul>
+                <li>Auskunft über Ihre gespeicherten Daten zu erhalten.</li>
+                <li>Die Berichtigung oder Löschung Ihrer Daten zu verlangen.</li>
+                <li>Der Verarbeitung Ihrer Daten zu widersprechen.</li>
+            </ul>
+            <p>Hierzu können Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns wenden.</p>
+        </div>
     </div>
 </body>
 
