--- a/frontend/Widerruf.html
+++ b/frontend/Widerruf.html
@@ -4,27 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Widerrufsbelehrung | LUXE BERLIN</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-light">
-    <div class="container py-5 bg-white shadow-sm my-5 rounded-4 p-5" style="max-width: 800px;">
-        <h1>Widerrufsbelehrung</h1>
-        <p>Sie haben das Recht, binnen vierzehn Tagen ohne Angabe von Gründen diesen Vertrag zu widerrufen.</p>
+    <div class="container py-5">
+        <div class="bg-white shadow-sm rounded-4 p-4 p-md-5 mx-auto" style="max-width: 850px;">
+            <h1 class="playfair mb-5 border-bottom pb-3">Widerrufsbelehrung</h1>
 
-        <h3 class="mt-4">Widerrufsrecht</h3>
-        <p>Die Widerrufsfrist beträgt vierzehn Tage ab dem Tag, an dem Sie oder ein von Ihnen benannter Dritter die
-            Waren in Besitz genommen haben.</p>
+            <p>Sie haben das Recht, binnen vierzehn Tagen ohne Angabe von Gründen diesen Vertrag zu widerrufen.</p>
 
-        <h3 class="mt-4">Folgen des Widerrufs</h3>
-        <p>Wenn Sie diesen Vertrag widerrufen, haben wir Ihnen alle Zahlungen, die wir von Ihnen erhalten haben
-            (einschließlich Lieferkosten), unverzüglich zurückzuzahlen.</p>
+            <h4 class="mt-4">Widerrufsrecht</h4>
+            <p>Die Widerrufsfrist beträgt vierzehn Tage ab dem Tag, an dem Sie oder ein von Ihnen benannter Dritter die
+                Waren in Besitz genommen haben.</p>
 
-        <h3 class="mt-4">Kontakt für Widerruf</h3>
-        <p>Um Ihr Widerrufsrecht auszuüben, müssen Sie uns informieren:<br>
-            LUXE BERLIN<br>
-            E-Mail:kocyigit.trade@gmail.com
-        </p>
+            <h4 class="mt-4">Folgen des Widerrufs</h4>
+            <p>Wenn Sie diesen Vertrag widerrufen, haben wir Ihnen alle Zahlungen, die wir von Ihnen erhalten haben
+                (inkl. Lieferkosten), unverzüglich und spätestens binnen vierzehn Tagen ab dem Tag zurückzuzahlen, an
+                dem die Mitteilung über Ihren Widerruf bei uns eingegangen ist.</p>
+
+            <h4 class="mt-4">Muster-Widerrufsformular</h4>
+            <div class="p-3 border rounded bg-light small">
+                <p>(Wenn Sie den Vertrag widerrufen wollen, dann füllen Sie bitte dieses Formular aus und senden Sie es
+                    zurück.)</p>
+                <p>An: LUXE BERLIN, [DEINE ADRESSE], E-Mail: support@kocyigit-trade.com</p>
+                <p>Hiermit widerrufe(n) ich/wir (*) den von mir/uns (*) abgeschlossenen Vertrag über den Kauf der
+                    folgenden Waren (*):</p>
+                <p>Bestellt am (*)/erhalten am (*):</p>
+                <p>Name des/der Verbraucher(s):</p>
+                <p>Anschrift des/der Verbraucher(s):</p>
+                <p>Unterschrift (nur bei Mitteilung auf Papier):</p>
+                <p>Datum:</p>
+                <p>(*) Unzutreffendes streichen.</p>
+            </div>
+        </div>
     </div>
 </body>
 
