--- a/frontend/Impressum.html
+++ b/frontend/Impressum.html
@@ -3,35 +3,79 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum | LUXE BERLIN</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>
+        :root {
+            --gold: #c5a059;
+            --navy: #1c2541;
+        }
+
+        body {
+            font-family: 'Montserrat', sans-serif;
+            color: var(--navy);
+        }
+
+        .playfair {
+            font-family: 'Playfair Display', serif;
+        }
+
+        .legal-box {
+            background: white;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+        }
+    </style>
 </head>
 
 <body class="bg-light">
-    <div class="container py-5 bg-white shadow-sm my-5 rounded-4 p-5" style="max-width: 800px;">
-        <h1 class="mb-4">Impressum</h1>
-        <p><strong>Angaben gemäß § 5 TMG:</strong></p>
-        <p>
-            [DEIN VORNAME VE NACHNAME]<br>
-            LUXE BERLIN<br>
-            [DEINE STRASSE VE HAUSNUMMER]<br>
-            [DEINE PLZ VE STADT]
-        </p>
-        <p><strong>Kontakt:</strong><br>
-            Telefon: [DEINE TELEFONNUMMER]<br>
-            E-Mail: [DEINE E-MAIL ADRESSE]
-        </p>
-        <p><strong>Umsatzsteuer-ID:</strong><br>
-            Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
-            [DEINE UST-IDNR - Yoksa "Nicht vorhanden" yazabilirsin]
-        </p>
-        <p><strong>Redaktionell verantwortlich:</strong><br>
-            [DEIN VORNAME VE NACHNAME]
-        </p>
-        <p><strong>EU-Streitschlichtung:</strong><br>
-            Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:
-            <a href="https://ec.europa.eu/consumers/odr/" target="_blank">https://ec.europa.eu/consumers/odr/</a>.
-        </p>
+    <div class="container py-5">
+        <div class="legal-box p-4 p-md-5 mx-auto" style="max-width: 850px;">
+            <h1 class="playfair mb-5 border-bottom pb-3">Impressum</h1>
+
+            <section class="mb-4">
+                <h5 class="fw-bold text-uppercase small text-muted">Angaben gemäß § 5 TMG</h5>
+                <p class="mb-0">[DEIN VORNAME VE NACHNAME]</p>
+                <p class="mb-0"><strong>LUXE BERLIN</strong></p>
+                <p class="mb-0">[DEINE STRASSE VE HAUSNUMMER]</p>
+                <p>[DEINE PLZ VE STADT], Deutschland</p>
+            </section>
+
+            <section class="mb-4">
+                <h5 class="fw-bold text-uppercase small text-muted">Kontakt</h5>
+                <p class="mb-0">Telefon: [DEINE TELEFONNUMMER]</p>
+                <p>E-Mail: <a href="mailto:support@kocyigit-trade.com" class="text-decoration-none"
+                        style="color: var(--gold);">support@kocyigit-trade.com</a></p>
+            </section>
+
+            <section class="mb-4">
+                <h5 class="fw-bold text-uppercase small text-muted">Umsatzsteuer-ID</h5>
+                <p>Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:<br>
+                    <strong>[DEINE UST-IDNR]</strong>
+                </p>
+            </section>
+
+            <section class="mb-4">
+                <h5 class="fw-bold text-uppercase small text-muted">Redaktionell verantwortlich</h5>
+                <p>[DEIN VORNAME VE NACHNAME]<br>[DEINE ADRESSE]</p>
+            </section>
+
+            <section class="mb-4">
+                <h5 class="fw-bold text-uppercase small text-muted">EU-Streitschlichtung</h5>
+                <p class="small text-muted">Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung
+                    (OS) bereit:
+                    <a href="https://ec.europa.eu/consumers/odr/" target="_blank"
+                        style="color: var(--gold);">https://ec.europa.eu/consumers/odr/</a>.<br>
+                    Unsere E-Mail-Adresse finden Sie oben im Impressum.
+                </p>
+            </section>
+
+            <div class="mt-5 pt-4 border-top">
+                <a href="index.html" class="btn btn-dark rounded-pill px-4">Zurück zum Shop</a>
+            </div>
+        </div>
     </div>
 </body>
 
