--- a/frontend/agb.html
+++ b/frontend/agb.html
@@ -10,60 +10,40 @@
 </head>
 
 <body class="bg-light">
-
     <div class="container py-5">
         <div class="bg-white shadow-sm rounded-4 p-4 p-md-5 mx-auto" style="max-width: 900px;">
-            <h1 class="mt-4 mb-5" style="font-family: 'Playfair Display'; color: var(--midnight);">Allgemeine
-                Geschäftsbedingungen</h1>
+            <h1 class="playfair mb-5 border-bottom pb-3">Allgemeine Geschäftsbedingungen</h1>
 
             <section class="mb-4">
                 <h5 class="fw-bold">1. Geltungsbereich</h5>
-                <p class="text-muted small">Für alle Bestellungen über unseren Online-Shop durch Verbraucher und
-                    Unternehmer gelten die nachfolgenden AGB.</p>
+                <p class="text-muted small">Für alle Bestellungen über unseren Online-Shop gelten die nachfolgenden AGB.
+                    Unser Shop richtet sich an Verbraucher und Unternehmer gleichermaßen.</p>
             </section>
 
             <section class="mb-4">
-                <h5 class="fw-bold">2. Vertragspartner, Vertragsschluss</h5>
-                <p class="text-muted small">Der Kaufvertrag kommt zustande mit <strong>LUXE BERLIN</strong>. Mit
-                    Einstellung der Produkte in den Online-Shop geben wir ein verbindliches Angebot zum Vertragsschluss
-                    über diese Artikel ab.</p>
+                <h5 class="fw-bold">2. Vertragsschluss</h5>
+                <p class="text-muted small">Der Kaufvertrag kommt mit LUXE BERLIN zustande. Durch Anklicken des
+                    Bestellbuttons geben Sie eine verbindliche Bestellung der im Warenkorb enthaltenen Waren ab.</p>
             </section>
 
             <section class="mb-4">
-                <h5 class="fw-bold">3. Lieferbedingungen</h5>
-                <p class="text-muted small">Zusätzlich zu den angegebenen Produktpreisen kommen eventuell noch
-                    Versandkosten hinzu. Wir liefern nur im Versandweg; eine Selbstabholung der Ware ist leider nicht
-                    möglich.</p>
+                <h5 class="fw-bold">3. Preise und Versandkosten</h5>
+                <p class="text-muted small">Die auf den Produktseiten genannten Preise enthalten die gesetzliche
+                    Mehrwertsteuer und sonstige Preisbestandteile. Versandkosten werden im Bestellprozess deutlich
+                    mitgeteilt.</p>
             </section>
 
             <section class="mb-4">
-                <h5 class="fw-bold">4. Bezahlung</h5>
-                <p class="text-muted small">In unserem Shop stehen Ihnen grundsätzlich die folgenden Zahlungsarten zur
-                    Verfügung:
-                    <br>- <strong>Kreditkarte:</strong> Die Belastung Ihrer Kreditkarte erfolgt mit Abschluss der
-                    Bestellung.
-                    <br>- <strong>PayPal:</strong> Sie bezahlen den Rechnungsbetrag über den Online-Anbieter PayPal.
-                </p>
+                <h5 class="fw-bold">4. Zahlung & Eigentumsvorbehalt</h5>
+                <p class="text-muted small">Die Zahlung erfolgt wahlweise per Kreditkarte veya PayPal. Die Ware bleibt
+                    bis zur vollständigen Bezahlung unser Eigentum.</p>
             </section>
 
-            <section class="mb-4">
-                <h5 class="fw-bold">5. Eigentumsvorbehalt</h5>
-                <p class="text-muted small">Die Ware bleibt bis zur vollständigen Bezahlung unser Eigentum.</p>
-            </section>
-
-            <section class="mb-4">
-                <h5 class="fw-bold">6. Transportschäden</h5>
-                <p class="text-muted small">Werden Waren mit offensichtlichen Transportschäden angeliefert, so
-                    reklamieren Sie solche Fehler bitte möglichst sofort beim Zusteller und nehmen Sie unverzüglich
-                    Kontakt zu uns auf.</p>
-            </section>
-
-            <footer class="mt-5 pt-4 border-top text-center">
-                <p class="small text-muted">Stand: Februar 2026</p>
+            <footer class="mt-5 pt-4 border-top text-center text-muted small">
+                Stand: Februar 2026 | LUXE BERLIN
             </footer>
         </div>
     </div>
-
 </body>
 
 </html>
